--- a/views/welcome.jade
+++ b/views/welcome.jade
@@ -35,3 +35,63 @@ append contenutoPagina
                 a(href='/prodotti') Catalogo
               li
                 a(href='/carrello') Carrello
+
+  #carosello.carousel.slide
+    .carousel-inner
+      .item
+        img(alt='', src='/img/slide-01.jpg')
+        .container
+          .carousel-caption
+            h1 Esempio
+            p.lead Qui ci si scrive qualcosa d'effetto
+            a.btn.btn-large.btn-primary(href='#') Iscrivi subito!
+      .item
+        img(alt='', src='/img/slide-02.jpg')
+        .container
+          .carousel-caption
+            h1 Esempio 2
+            p.lead Qui ci si scrive qualcosa d'effetto
+            a.btn.btn-large.btn-primary(href='#') Iscrivi subito!
+      .item
+        img(alt='', src='/img/slide-03.jpg')
+        .container
+          .carousel-caption
+            h1 Esempio 3
+            p.lead Qui ci si scrive qualcosa d'effetto
+            a.btn.btn-large.btn-primary(href='#') Iscrivi subito!
+      a.left.carousel-control(data-slide='prev', href='#carosello')
+        ‹
+      a.right.carousel-control(data-slide='next', href='#carosello')
+        ›
+  .container.marketing
+    .row
+      .span4
+        h2 Spot
+        p Qualcosa di fico
+        p
+          a.btn.btn-warning Vai subito!
+      .span4
+        h2 Spot
+        p Qualcosa di fico
+        p
+          a.btn.btn-warning Vai subito!
+      .span4
+        h2 Spot
+        p Qualcosa di fico
+        p
+          a.btn.btn-warning Vai subito!
+    hr.featurette-divider
+      .featurette
+        img
+        h2 Qualcosa di grosso
+        p.lead Tipo questo scritto qua sotto... che però è piccolo
+    footer
+      p.pull-right
+        a(href='#') Torna su
+      p © 2013 Company, Inc. · 
+      a(href='#') Privacy
+      a(href='#') Termini
+
+append scripts
+  // Importiamo il JS specifico della pagina
+  script(src='/js/welcome.js')
