Added Underscore and Backbone

--- a/views/welcome.jade
+++ b/views/welcome.jade
@@ -38,7 +38,7 @@ append contenutoPagina
 
   #carosello.carousel.slide
     .carousel-inner
-      .item
+      .item.active
         img(alt='', src='/img/slide-01.jpg')
         .container
           .carousel-caption
@@ -59,10 +59,10 @@ append contenutoPagina
             h1 Esempio 3
             p.lead Qui ci si scrive qualcosa d'effetto
             a.btn.btn-large.btn-primary(href='#') Iscrivi subito!
-      a.left.carousel-control(data-slide='prev', href='#carosello')
-        ‹
-      a.right.carousel-control(data-slide='next', href='#carosello')
-        ›
+    a.left.carousel-control(data-slide='prev', href='#carosello')
+      ‹
+    a.right.carousel-control(data-slide='next', href='#carosello')
+      ›
   .container.marketing
     .row
       .span4
