--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,3 +15,5 @@ html(lang="en")
       script(src='/js/jquery-1.9.1.min.js')
       // Plugin Bootstrap
       script(src='/js/bootstrap.min.js')
+      // Backbone
+      script(src='/js/backbone-min.js')
