Added underscore to the layout

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,5 +15,7 @@ html(lang="en")
       script(src='/js/jquery-1.9.1.min.js')
       // Plugin Bootstrap
       script(src='/js/bootstrap.min.js')
+      // Underscore
+      script(src='/js/underscore-min.js')
       // Backbone
       script(src='/js/backbone-min.js')
