--- a/views/welcome.jade
+++ b/views/welcome.jade
@@ -44,21 +44,21 @@ append contenutoPagina
           .carousel-caption
             h1 Esempio
             p.lead Qui ci si scrive qualcosa d'effetto
-            a.btn.btn-large.btn-primary(href='#') Iscrivi subito!
+            a.btn.btn-large.btn-primary(href='#') Inscrivi subito!
       .item
         img(alt='', src='/img/slide-02.jpg')
         .container
           .carousel-caption
             h1 Esempio 2
             p.lead Qui ci si scrive qualcosa d'effetto
-            a.btn.btn-large.btn-primary(href='#') Iscrivi subito!
+            a.btn.btn-large.btn-primary(href='#') Inscrivi subito!
       .item
         img(alt='', src='/img/slide-03.jpg')
         .container
           .carousel-caption
             h1 Esempio 3
             p.lead Qui ci si scrive qualcosa d'effetto
-            a.btn.btn-large.btn-primary(href='#') Iscrivi subito!
+            a.btn.btn-large.btn-primary(href='#') Inscrivi subito!
     a.left.carousel-control(data-slide='prev', href='#carosello')
       ‹
     a.right.carousel-control(data-slide='next', href='#carosello')
